test/zinc_source/compile_errors/callables/28_arrow_lambda_too_many_args.zn
// expected-error: indirect call got too many arguments
fn main() {
    f = x -> x
    print(f(1, 2))
}
